== 0.3.x (In Git)

With the addition of Latvian and Hungarian Cucumber now supports 32(!!) languages.

=== New features
* Added #headers to Cucumber::Ast::Table (Ben Mabey)
* New translation for Latvian (Vitauts Stočka)
* New translation for Hungarian (#287 Bence Golda)
* Pick up failure on after hook (#272 Aslak Hellesøy)

=== Bugfixes
* Span html tags appear on HTML results with 0.3.0 (#299 Aslak Hellesøy)
* Fixed incorrect colours in pretty formatter's table headers for outline tables (Aslak Hellesøy)
* Exceptions from steps called within hooks are now reraised. (#294 Ben Mabey)

== 0.3.0 2009-04-14

This release has some minor changes to the APIs, but big enough that a new major release is in order.
The biggest change is the new semantics of the #World method. Previously you would call this method
several times, passing a Proc and extending the world object of the previous one with a Ruby module.
The problem was that there was no nice way to ensure the order in which these procs were called, which
led to some unexpected situations. In this release you can only register a single World proc. If you
want to extend a world with certain modules, you simply call the #World method with the module(s)
you wish to extend the World with. The Sinatra example illustrates how to do this. Also check out
the RDoc for Cucumber::StepMother#World.

The Visitor API (which is used for formatters) has also changed slightly. However, we have tried to
do this in a backwards compatible way, so if you have custom formatters for Cucumber 0.2 they should
still work.

One of the most significant new features is Tagged Hooks: http://wiki.github.com/aslakhellesoy/cucumber/hooks
This lets you associate Before and After blocks with specific scenarios.

We are also deprecating the step_list, step_pattern, feature_list, and feature_pattern accessors on
Cucumber::Rake::Task. These accessors will be completely removed in version 0.4. For complex settings 