@@ -9,6 +9,7 @@ With the addition of Latvian and Hungarian Cucumber now supports 32(!!) language
 * Pick up failure on after hook (#272 Aslak Hellesøy)
 
 === Bugfixes
+* Fixed progress formatter raising errors when running Scenario outlines (#302 Joseph Wilk)
 * Span html tags appear on HTML results with 0.3.0 (#299 Aslak Hellesøy)
 * Fixed incorrect colours in pretty formatter's table headers for outline tables (Aslak Hellesøy)
 * Exceptions from steps called within hooks are now reraised. (#294 Ben Mabey)
